# pragmatic_sim_fidelity

./: .pylintrc  LICENSE  README.md  config.json  pyproject.toml
src/pragmatic_sim_fidelity/: plugins.py  registry.py  utils.py
src/pragmatic_sim_fidelity/core/: pipeline.py  planner.py  simulator.py  task.py  types.py
src/pragmatic_sim_fidelity/planners/: random_shooting.py
src/pragmatic_sim_fidelity/samplers/: delta_q.py  move_ee.py
src/pragmatic_sim_fidelity/scripts/: run.py
src/pragmatic_sim_fidelity/simulators/geom3d_sim/: collision.py  sim.py
src/pragmatic_sim_fidelity/tasks/: fridge_reach_ee_3d.py  fridge_reach_ee_pybullet.py
src/pragmatic_sim_fidelity/viz/: geom3d_debug.py
tests/: test_utils.py
